kubernetes/main/apps/default/nas/1p/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: op
  namespace: default
spec:
  ports:
    - name: api
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: op
  namespace: default
  labels:
    kubernetes.io/service-name: op
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.3
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: api
    port: 8080
    protocol: TCP
